--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "firebase": "^9.14.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "sass": "^1.56.1"
+    "react-router-dom": "6",
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
