--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "firebase": "^9.14.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "6",
-    "web-vitals": "^3.1.0"
+    "react-router-dom": "^6.4.3",
+    "sass": "^1.56.1"
   },
   "scripts": {
     "start": "react-scripts start",
